--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -184,7 +184,7 @@
 						<li><a href="{{ url_for('main.jeunes')}}">Jeunes</a></li>
 						<li><a href="{{ url_for('main.blog')}}">Blog</a></li>
 						<li><a href="{{ url_for('main.sponsors')}}">Partenaires</a></li>
-						<li><a href="#">Equipements</a></li>
+						<li><a href="{{ url_for('main.equipements')}}">Equipements</a></li>
 						<li><a href="#">Commission médicale</a></li>
 					</ul>
 				</nav>
