--- a/PARC/templates/sponsors.html
+++ b/PARC/templates/sponsors.html
@@ -5,7 +5,7 @@
 
 	<!-- Home -->
 
-	<div class="home d-flex flex-column align-items-start justify-content-end">
+<div style="padding-bottom: 0px; padding-top: 200px;">
 		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/team_page.jpg" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
