--- a/PARC/templates/senior.html
+++ b/PARC/templates/senior.html
@@ -56,13 +56,15 @@
 						<div class="about_content">
 							<div class="about_content_container">
 								<div class="section_title_container">
-									<div class="section_title"><h1>about PARC</h1></div>
+									<div class="section_title"><h1>Les équipes sénior</h1></div>
 								</div>
-								<div class="about_title">mission&vision</div>
-								<div class="about_subtitle">Resoect for the game</div>
+								<div class="about_title">A, B et C</div>
+								<div class="about_subtitle">Le respect du jeu</div>
 								<div class="about_text">
-									<p>L'équipe A joue en fédérale 3 la B en réserve de fédérale 3 et la C en 3eme division térritoriale bla blaNullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
-									<p>Nam turpis nulla, ullamcorper volutpat faucibus ut, facilisis in elit. Nam blandit diam vel felis porta, vitae congue nulla feugiat. Vestibulum rhoncus odio elit, at aliquet sem posuere vel.</p>
+									<p>L'équipe A joue en fédérale 3 depuis XXXX. Elle évolue pour la saison 2019/2020 dans la poule numéro 8 avec les équipes du grand ouest comme la Baule, Plouzané, Tours ou encore Angers. Ces dernières années l'équipe A a réussi à se qualifier plusieurs fois
+										pour les play off. L'équipe B joue en réserve de fédérale 3 (excellence B) et effectue tout les déplacement avec l'équipe A. Le PARC possède également une troisième équipe (C) qui évolue en 3/4eme division térritoriale
+										avec des déplacements principalement en bretagne.</p>
+									<p>Les trois équipes s'entrainent en commun le mardi et on un entrainements spécifique le vendredi. La A et la B s'entrainant à Auray et la C à Pluvigner. L'équipe sénior et constitué en tout d'environ 80 licencié et forme un groupe soudé.</p>
 								</div>
 
 							</div>
