--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -375,33 +375,73 @@
 
 	<!-- Player of the month -->
 
-	<div id="joueur" class="player">
-		<div class="container">
-			<div class="row">
-				<div class="col-xl-6">
-					<div class="player_content">
-						<div class="section_title_container">
-							<div class="section_title"><h1>Un joueur au hasard</h1></div>
-							<div class="section_subtitle">présentation</div>
-						</div>
-						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
-							<div class="player_num">8</div>
-							<div class="player_name">Remy Pointier</div>
-						</div>
-						<div class="player_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
-							<p>Nam turpis nulla, ullamcorper volutpat faucibus ut, facilisis in elit. Nam blandit diam vel felis porta, vitae congue nulla feugiat. Vestibulum rhoncus odio elit, at aliquet sem posuere vel.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-6">
-					<div class="player_images d-flex flex-row align-items-end justify-content-start">
-						<div class="player_image"><img src="{{ url_for('static', filename='images/player_1.png')}}" alt=""></div>
-						<div class="player_image"><img src="{{ url_for('static', filename='images/player_2.png')}}" alt=""></div>
-					</div>
-				</div>
-			</div>
-		</div>
+
+		<script type="text/javascript" language="JavaScript">
+
+		randomNumber = Math.floor(Math.random()*2+1);
+
+		window.onload = function() {
+		        document.getElementById(randomNumber.toString()).style.display = "block";
+		}
+	</script>
+
+	<div id='1' class="player" style="display:None;">
+	  <div id="joueur" class="container">
+	    <div class="row">
+	      <div class="col-xl-6">
+	        <div class="player_content">
+	          <div class="section_title_container">
+	            <div class="section_title"><h1>Un joueur au hasard</h1></div>
+	            <div class="section_subtitle">présentation</div>
+	          </div>
+	          <div class="player_name_container d-flex flex-row align-items-end justify-content-start">
+	            <div class="player_num">8</div>
+	            <div class="player_name">Remy Pointier</div>
+	          </div>
+	          <div class="player_text">
+	            <p>Née en 1989 Rémy commence le rugby à l'age de 7 à Annecy. A 15 ans il intègre le pôle régional à Grenoble . Il jouera ensuite à Vannes à en fédérale 1 de ses 19 à 23 ans. Suite à une blessure il est contraint d'arrêter le rugby pendant 2 ans. Il reprend en 2016 à Auray
+								 club pour lequel il est salarié depuis 2014 en tant responsable de l'école de rugby.</p>
+	            <p>Rémy à la chance de vivre de ma passion, et aime se démener pour ses co-équipiers. Pour lui le rugby c'est sa deuxième famille.</p>
+	          </div>
+	        </div>
+	      </div>
+	      <div class="col-xl-6">
+	        <div class="player_images d-flex flex-row align-items-end justify-content-start">
+	          <div class="player_image"><img src="{{ url_for('static', filename='images/player_1.png')}}" alt=""></div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div id='2' class="player" style="display:None;">
+	  <div id="joueur" class="container">
+	    <div class="row">
+	      <div class="col-xl-6">
+	        <div class="player_content">
+	          <div class="section_title_container">
+	            <div class="section_title"><h1>Un joueur au hasard</h1></div>
+	            <div class="section_subtitle">présentation</div>
+	          </div>
+	          <div class="player_name_container d-flex flex-row align-items-end justify-content-start">
+	            <div class="player_num">9</div>
+	            <div class="player_name">Valentin Lefranc</div>
+	          </div>
+	          <div class="player_text">
+	            <p>Valentin née en 1989 joue au rugby depuis ses 19 ans et évolue au poste de demie de méléé. Ses études l'ont amené à jouer pour de nombreux clubs en france (SPRC, Le Rheu, Gif sur Yvette, Marcoussis) et à l'étranger : Bérisso en Argentine, RC Valencia en Espagne et RC Berlin en Allemagne.
+							Le rugby lui à toujours permis de s'intégrer malgré les nombreux voyages. Il est au PARC depuis 2016</p>
+	            <p>Il travail en tant que consultant en intelligence artificielle. Ses autres hobbies sont le windsurf et le football Gaélique.</p>
+	          </div>
+	        </div>
+	      </div>
+	      <div class="col-xl-6">
+	        <div class="player_images d-flex flex-row align-items-end justify-content-start">
+	          <div class="player_image"><img src="{{ url_for('static', filename='images/valentinL.jpg')}}" alt=""></div>
+
+	        </div>
+	      </div>
+	    </div>
+	  </div>
 	</div>
 
 	<!-- News -->
