--- a/PARC/templates/feminine.html
+++ b/PARC/templates/feminine.html
@@ -37,13 +37,15 @@
 					<div class="about_content">
 						<div class="about_content_container">
 							<div  class="section_title_container">
-								<div class="section_title"><h1>about PARC</h1></div>
+								<div class="section_title"><h1>Les Breizh'Barians</h1></div>
 							</div>
-							<div class="about_title">mission&vision</div>
-							<div class="about_subtitle">Resoect for the game</div>
+							<div class="about_title">Rugby fémninin</div>
+							<div class="about_subtitle">dans le morbihan</div>
 							<div class="about_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
-								<p>Nam turpis nulla, ullamcorper volutpat faucibus ut, facilisis in elit. Nam blandit diam vel felis porta, vitae congue nulla feugiat. Vestibulum rhoncus odio elit, at aliquet sem posuere vel.</p>
+								<p>Les Breizh'Barians est une équipe de rugby Fénminine sénior (+18 ans) à 15 évoluant en fédéral 2.
+								Elles font partie d'un rassemblement regroupant 6 clubs : Le PARC, RCV (Vannes), ROL (Lorient), RLL (Lanester), RCPE (Elven), Grand Champions
+							  Les entrainements sont chaque jeudi  à Pluvigner à 20h</p>
+					
 							</div>
 
 						</div>
