--- a/PARC/static/styles/main_styles.css
+++ b/PARC/static/styles/main_styles.css
@@ -728,15 +728,31 @@ section
 5. Home
 *********************************/
 
-.home
+
+
+@media only screen and (min-width: 1000px)
 {
-	height: 100vh;
+	.home
+	{
+		height: 100vh;
+	}
+}
+
+@media only screen and (max-width: 1000px)
+{
+	.home
+	{
+		display: none;
+	  margin-top: 200px;
+	}
 }
 .home_slider_container
 {
 	width: 100%;
 	height: 100%;
 }
+
+
 .home_slide
 {
 	width: 100%;
