--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -391,7 +391,7 @@
 	      <div class="col-xl-6">
 	        <div class="player_content">
 	          <div class="section_title_container">
-	            <div class="section_title"><h1>Un joueur au hasard</h1></div>
+	            <div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
 	            <div class="section_subtitle">présentation</div>
 	          </div>
 	          <div class="player_name_container d-flex flex-row align-items-end justify-content-start">
@@ -420,7 +420,7 @@
 	      <div class="col-xl-6">
 	        <div class="player_content">
 	          <div class="section_title_container">
-	            <div class="section_title"><h1>Un joueur au hasard</h1></div>
+	            <div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
 	            <div class="section_subtitle">présentation</div>
 	          </div>
 	          <div class="player_name_container d-flex flex-row align-items-end justify-content-start">
@@ -450,7 +450,7 @@
 	      <div class="col-xl-6">
 	        <div class="player_content">
 	          <div class="section_title_container">
-	            <div class="section_title"><h1>Un joueur au hasard</h1></div>
+	            <div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
 	            <div class="section_subtitle">présentation</div>
 	          </div>
 	          <div class="player_name_container d-flex flex-row align-items-end justify-content-start">
@@ -480,7 +480,7 @@
 				<div class="col-xl-6">
 					<div class="player_content">
 						<div class="section_title_container">
-							<div class="section_title"><h1>Un joueur au hasard</h1></div>
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
 							<div class="section_subtitle">présentation</div>
 						</div>
 						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
@@ -510,7 +510,7 @@
 				<div class="col-xl-6">
 					<div class="player_content">
 						<div class="section_title_container">
-							<div class="section_title"><h1>Un joueur au hasard</h1></div>
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
 							<div class="section_subtitle">présentation</div>
 						</div>
 						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
@@ -542,17 +542,17 @@
 				<div class="col-xl-6">
 					<div class="player_content">
 						<div class="section_title_container">
-							<div class="section_title"><h1>Un joueur au hasard</h1></div>
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
 							<div class="section_subtitle">présentation</div>
 						</div>
 						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
-							<div class="player_num"></div>
+							<div class="player_num">4</div>
 							<div class="player_name">Antoine Bierent </div>
 						</div>
 						<div class="player_text">
 							<p>Néé en 1998 Antoine a commencé le rugby a l'age de 6 ans. Il joue9 ans à Hennebont, puis 6 ans à Vannes
 								avec qui il est champion de France en 2016, 2 année espoir à vannes.
-								A Auray depuis 2018.
+								A Auray depuis 2018 et occupe le poste de seconde ligne.
 								</p>
 							<p>Actuellement en 3ème année STAPS à Arradon.</p>
 						</div>
