--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -185,7 +185,7 @@
 						<li><a href="{{ url_for('main.blog')}}">Blog</a></li>
 						<li><a href="{{ url_for('main.sponsors')}}">Partenaires</a></li>
 						<li><a href="{{ url_for('main.equipements')}}">Equipements</a></li>
-						<li><a href="#">Commission médicale</a></li>
+						<li><a href="{{ url_for('main.medical')}}">Commission médicale</a></li>
 					</ul>
 				</nav>
 				<div class="menu_links">
