--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -202,7 +202,7 @@
 							<div class="team_large_name"><a href="#">Jean Claude Mothiron</a></div>
 							<div class="team_large_title">Président</div>
 							<div class="team_large_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
+								<p></p>
 							</div>
 
 						</div>
@@ -217,7 +217,7 @@
 							<div class="team_large_name"><a href="#">Marc Capdeville</a></div>
 							<div class="team_large_title">Vice président</div>
 							<div class="team_large_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
+								<p></p>
 							</div>
 
 						</div>
@@ -232,7 +232,8 @@
 							<div class="team_large_name"><a href="#">Caroline Drouin</a></div>
 							<div class="team_large_title">Marraine</div>
 							<div class="team_large_text">
-								<p>Joueuse de l'équipe de france ... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
+								<p>Caroline Drouin, née à Auray le 7 juillet 1996, est une joueuse internationale française de rugby à XV occupant le poste de demi d'ouverture au Stade rennais
+									rugby et en équipe de France. Elle est élue meilleure joueuse de Top 8 de la saison 2017-2018. Elle est également internationale de rugby à sept, sous contrat semi-professionnel avec la Fédération française de rugby.</p>
 							</div>
 
 						</div>
@@ -280,8 +281,8 @@
 					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
 						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/people1.jpg')}}" alt=""></a><div>C</div></div>
 						<div class="team_small_content text-sm-center">
-							<div class="team_small_name"><a href="#">Paul Kay</a></div>
-							<div class="team_small_title">Coach</div>
+							<div class="team_small_name"><a href="#">? ?</a></div>
+							<div class="team_small_title">Ecole de rugby</div>
 						</div>
 					</div>
 				</div>
@@ -292,7 +293,7 @@
 						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/people2.jpg')}}" alt=""></a><div>C/J</div></div>
 						<div class="team_small_content text-sm-center">
 							<div class="team_small_name"><a href="#">Alexandre Garanger</a></div>
-							<div class="team_small_title">Coach/joueur</div>
+							<div class="team_small_title">Ecole de rugby / joueur </div>
 						</div>
 					</div>
 				</div>
@@ -302,7 +303,77 @@
 					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
 						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/people3.jpg')}}" alt=""></a><div>C</div></div>
 						<div class="team_small_content text-sm-center">
-							<div class="team_small_name"><a href="#">Patrick Kay</a></div>
+							<div class="team_small_name"><a href="#">Philippe Vanier</a></div>
+							<div class="team_small_title">Ecole de rugby</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+			<div class="row team_small_row">
+
+				<!-- Team Item -->
+				<div class="col-xl-2 col-md-4 col-sm-6">
+					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
+						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/ErwanD.jpg')}}" alt=""></a><div>C</div></div>
+						<div class="team_small_content text-sm-center">
+							<div class="team_small_name"><a href="#">Erwan Drouin</a></div>
+							<div class="team_small_title">Coach senior C </div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Team Item -->
+				<div class="col-xl-2 col-md-4 col-sm-6">
+					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
+						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/pp.jpg')}}" alt=""></a><div>C</div></div>
+						<div class="team_small_content text-sm-center">
+							<div class="team_small_name"><a href="#">Arnaud Joubioux</a></div>
+							<div class="team_small_title">Coach U18</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Team Item -->
+				<div class="col-xl-2 col-md-4 col-sm-6">
+					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
+						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/NicoB.jpg')}}" alt=""></a><div>C</div></div>
+						<div class="team_small_content text-sm-center">
+							<div class="team_small_name"><a href="#">Nicolas Brussilowski </a></div>
+							<div class="team_small_title">Coach U16</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Team Item -->
+				<div class="col-xl-2 col-md-4 col-sm-6">
+					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
+						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/RemyPC.jpg')}}" alt=""></a><div>C/J</div></div>
+						<div class="team_small_content text-sm-center">
+							<div class="team_small_name"><a href="#">Rémy Pointier</a></div>
+							<div class="team_small_title">Ecole de rugby</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Team Item -->
+				<div class="col-xl-2 col-md-4 col-sm-6">
+					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
+						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/LaurentB.jpg')}}" alt=""></a><div>C</div></div>
+						<div class="team_small_content text-sm-center">
+							<div class="team_small_name"><a href="#">Laurent Blanc</a></div>
+							<div class="team_small_title">Ecole de rugby</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Team Item -->
+				<div class="col-xl-2 col-md-4 col-sm-6">
+					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
+						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/pp.jpg')}}" alt=""></a><div>C</div></div>
+						<div class="team_small_content text-sm-center">
+							<div class="team_small_name"><a href="#"> ?? </a></div>
 							<div class="team_small_title">Coach</div>
 						</div>
 					</div>
