--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -247,7 +247,7 @@
 							<div class="newsletter">
 								<div class="newsletter_title">Nos autres partenaires</div>
 								<li class="d-flex flex-row align-items-start justify-content-start">
-									<div>Alredis ....</div>
+									<div>Alredis, Ouest boissons, Super U, Fid'Ouest, Veolia, AXA, STURNO, Pluvigner</div>
 								</li>
 							</div>
 						</div>
