--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -449,7 +449,7 @@
 
 		<script type="text/javascript" language="JavaScript">
 
-		randomNumber = Math.floor(Math.random()*7+1);
+		randomNumber = Math.floor(Math.random()*11+1);
 
 		window.onload = function() {
 		        document.getElementById(randomNumber.toString()).style.display = "block";
@@ -669,6 +669,135 @@
 			</div>
 		</div>
 	</div>
+
+	<div id='8' class="player" style="display:None;">
+		<div id="joueur" class="container">
+			<div class="row">
+				<div class="col-xl-6">
+					<div class="player_content">
+						<div class="section_title_container">
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
+							<div class="section_subtitle">présentation</div>
+						</div>
+						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
+							<div class="player_num">12</div>
+							<div class="player_name">Damien Rolland </div>
+						</div>
+						<div class="player_text">
+							<p>Joueur de Rugby a XV, au poste de 12, et à VII, joueur polyvalent.
+								Également passionné de surf et shapeur à ses temps perdus.
+								</p>
+							<p>Actuellement en 4ème année d'école d'ingénieur en alternance à Vannes.
+							Apprenti Ingénieur Technique chez Prolarge sur projet de sous-traitance de la Marine Nationale.</p>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="player_images d-flex flex-row align-items-end justify-content-start">
+						<div class="player_image"><img src="{{ url_for('static', filename='images/Damien.jpg')}}" alt=""></div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id='9' class="player" style="display:None;">
+		<div id="joueur" class="container">
+			<div class="row">
+				<div class="col-xl-6">
+					<div class="player_content">
+						<div class="section_title_container">
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
+							<div class="section_subtitle">présentation</div>
+						</div>
+						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
+							<div class="player_num">13</div>
+							<div class="player_name">Pierrick Abiven </div>
+						</div>
+						<div class="player_text">
+							<p>Né en 1993. Pierrick a commencé le rugby à 5 ans au rugby club Plabennec. Gravissant les catégories d’âge il a également représenter la Bretagne dans l’équipe régionale. A cela s’ajoute une expérience en Argentine où il a joué au Banco Rugby Club de Mendoza pendant 6 mois.
+								Il est a Auray auray depuis 2017.
+								</p>
+							<p>Dans la vie proffessionnel Pierrick travaille à l’observatoire de l’habitat de l’ADIL du Morbihan en tant que chargé d’études habitat.</p>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="player_images d-flex flex-row align-items-end justify-content-start">
+						<div class="player_image"><img src="{{ url_for('static', filename='images/PierrickA.png')}}" alt=""></div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id='10' class="player" style="display:None;">
+		<div id="joueur" class="container">
+			<div class="row">
+				<div class="col-xl-6">
+					<div class="player_content">
+						<div class="section_title_container">
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
+							<div class="section_subtitle">présentation</div>
+						</div>
+						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
+							<div class="player_num">9</div>
+							<div class="player_name">mathias Kervarrec </div>
+						</div>
+						<div class="player_text">
+							<p>Mathias joue au rugby à Auray depuis la catégorie poussin au poste de demi de mêlée. Son père et son parrain jouaient aussi à auray.
+								C'est donc une affaire de famille.
+								</p>
+							<p>En dehors du rugby il joue de la batterie dans un groupe de rock avec des copains du PARC. Il travaille dans l agriculture..</p>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="player_images d-flex flex-row align-items-end justify-content-start">
+						<div class="player_image"><img src="{{ url_for('static', filename='images/MathiasK.jpg')}}" alt=""></div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id='11' class="player" style="display:None;">
+		<div id="joueur" class="container">
+			<div class="row">
+				<div class="col-xl-6">
+					<div class="player_content">
+						<div class="section_title_container">
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
+							<div class="section_subtitle">présentation</div>
+						</div>
+						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
+							<div class="player_num">5</div>
+							<div class="player_name">Sebastien Murcia </div>
+						</div>
+						<div class="player_text">
+							<p>Sébastien Murcia est né en 1973. Il a commencé le rugby sur le tard à 40 ans. Sportif dan l'ame il d'abord commencé par la natation et le foot. Ensuite la planche à voile, le surf, et maintenant le kitesurf.
+								</p>
+							<p>Sébastien possède un DESS assurances après ma maitrise de droit. Il a travaillé dans les assurances et ensuite en SSII comme consultant pour ensuite s'associer avec son frère pour créer Kite Spirit.</p>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="player_images d-flex flex-row align-items-end justify-content-start">
+						<div class="player_image"><img src="{{ url_for('static', filename='images/Seb.jpg')}}" alt=""></div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<!-- News -->
 
