--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -340,7 +340,7 @@
 					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
 						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/NicoB.jpg')}}" alt=""></a><div>C</div></div>
 						<div class="team_small_content text-sm-center">
-							<div class="team_small_name"><a href="#">Nicolas Brussilowski </a></div>
+							<div class="team_small_name"><a href="#">? ? </a></div>
 							<div class="team_small_title">Coach U16</div>
 						</div>
 					</div>
@@ -727,7 +727,7 @@
 				</div>
 				<div class="col-xl-6">
 					<div class="player_images d-flex flex-row align-items-end justify-content-start">
-						<div class="player_image"><img src="{{ url_for('static', filename='images/PierrickA.png')}}" alt=""></div>
+						<div class="player_image"><img src="{{ url_for('static', filename='images/PierrickA.jpg')}}" alt=""></div>
 
 					</div>
 				</div>
