--- a/PARC/templates/feminine.html
+++ b/PARC/templates/feminine.html
@@ -27,7 +27,7 @@
 				<!-- About Image -->
 				<div class="col-xl-6 order-xl-1 order-2">
 					<div class="about_image">
-						<div class="background_image" style="background-image:url(static/images/Fem2.png)"></div>
+						<div class="background_image" style="background-image:url(static/images/Fem2.jpg)"></div>
 						<img src="images/about_1.jpg" alt="">
 					</div>
 				</div>
@@ -45,7 +45,7 @@
 								<p>Les Breizh'Barians est une équipe de rugby Fénminine sénior (+18 ans) à 15 évoluant en fédéral 2.
 								Elles font partie d'un rassemblement regroupant 6 clubs : Le PARC, RCV (Vannes), ROL (Lorient), RLL (Lanester), RCPE (Elven), Grand Champions
 							  Les entrainements sont chaque jeudi  à Pluvigner à 20h</p>
-					
+
 							</div>
 
 						</div>
@@ -56,7 +56,7 @@
 		</div>
 	</div>
 
-	<div class="section_title_container" style='margin-top: 50px;'>
+	<div class="section_title_container" style='margin-top: 50px;margin-left: 100px;'>
 		<div class="section_title"><h1>Le classement</h1></div>
 	</div>
 
@@ -75,7 +75,7 @@
 				<!-- About Image -->
 				<div class="col-xl-6 order-xl-2 order-1">
 					<div class="about_image">
-						<div class="background_image" style="background-image:url(static/images/Fem1.jpeg)"></div>
+						<div class="background_image" style="background-image:url(static/images/Fem1.jpg)"></div>
 						<img src="images/about_1.jpg" alt="">
 					</div>
 				</div>
