--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -265,6 +265,7 @@
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
   							<nav class="footer_nav ml-md-auto order-md-2 order-1">
   								<ul class="d-flex flex-row align-items-start justify-content-start flex-wrap">
+										<li><a href="#">Photos : Faustine Bernard  </a></li>
 										<li><a href="https://www.linkedin.com/in/valentin-lefranc-10542b66">Autheur : Valentin Lefranc  </a></li>
   									<li><a href="{{ url_for('main.new_post')}}">Admin</a></li>
   								</ul>
