--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -280,7 +280,7 @@
 					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
 						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/people1.jpg')}}" alt=""></a><div>C</div></div>
 						<div class="team_small_content text-sm-center">
-							<div class="team_small_name"><a href="#">? ?</a></div>
+							<div class="team_small_name"><a href="#">Michel Grzeskowiak</a></div>
 							<div class="team_small_title">Ecole de rugby</div>
 						</div>
 					</div>
@@ -337,7 +337,7 @@
 				<!-- Team Item -->
 				<div class="col-xl-2 col-md-4 col-sm-6">
 					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
-						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/NicoB.jpg')}}" alt=""></a><div>C</div></div>
+						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/coach.jpg')}}" alt=""></a><div>C</div></div>
 						<div class="team_small_content text-sm-center">
 							<div class="team_small_name"><a href="#">? ? </a></div>
 							<div class="team_small_title">Coach U16</div>
@@ -448,7 +448,7 @@
 
 		<script type="text/javascript" language="JavaScript">
 
-		randomNumber = Math.floor(Math.random()*11+1);
+		randomNumber = Math.floor(Math.random()*12+1);
 
 		window.onload = function() {
 		        document.getElementById(randomNumber.toString()).style.display = "block";
@@ -796,6 +796,39 @@
 			</div>
 		</div>
 	</div>
+
+	<div id='12' class="player" style="display:None;">
+		<div id="joueur" class="container">
+			<div class="row">
+				<div class="col-xl-6">
+					<div class="player_content">
+						<div class="section_title_container">
+							<div class="section_title"><h1>Un(e) joueur(euse) au hasard</h1></div>
+							<div class="section_subtitle">présentation</div>
+						</div>
+						<div class="player_name_container d-flex flex-row align-items-end justify-content-start">
+							<div class="player_num">10</div>
+							<div class="player_name">Sergio Kasper</div>
+						</div>
+						<div class="player_text">
+							<p>Sergio est sud africain et a joué au Griffons et au Blue bulls. Il rejoint le PARC en 2019. Sergio à pour ambition de travailler dur pour réussir dans le rugby et la vie.
+							    </p>
+							<p>Il aime le rugby bien évidement, voyager et les aventures de vie en générale</p>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="player_images d-flex flex-row align-items-end justify-content-start">
+						<div class="player_image"><img src="{{ url_for('static', filename='images/SergioK.jpg')}}" alt=""></div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 
 
 	<!-- News -->
