--- a/PARC/templates/jeunes.html
+++ b/PARC/templates/jeunes.html
@@ -6,7 +6,7 @@
 	<!-- Home -->
 
 	<div class="home d-flex flex-column align-items-start justify-content-end">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="static/images/jeunes2.png" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="static/images/jeunes2.jpg" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col text-center">
@@ -25,8 +25,7 @@
 				<!-- Info Image -->
 				<div class="col-lg-6 order-lg-1 order-2">
 					<div class="info_image">
-						<div class="background_image" style="background-image:url(static/images/jeunes.jpg)"></div>
-						<img src="{{ url_for('static', filename='images/CiteMarine.png')}}" alt="">
+						<div class="background_image" style="background-image:url(static/images/seniorjeunes.jpg)"></div>
 					</div>
 				</div>
 
@@ -34,7 +33,33 @@
 				<div class="col-lg-6 order-lg-2 order-1">
 					<div class="info_content">
 						<div class="section_title_container">
-							<div class="section_title"><h1>Les U...</h1></div>
+							<div class="section_title"><h1>L'école de rugby'</h1></div>
+							<div class="section_subtitle">Entraineurs : </div>
+						</div>
+						<div class="info_text">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container" style="margin-bottom: 100px;">
+			<div class="row">
+
+				<!-- Info Image -->
+				<div class="col-lg-6 order-lg-1 order-2">
+					<div class="info_image">
+						<div class="background_image" style="background-image:url(static/images/jeunesU18.jpg)"></div>
+					</div>
+				</div>
+
+				<!-- Info Content -->
+				<div class="col-lg-6 order-lg-2 order-1">
+					<div class="info_content">
+						<div class="section_title_container">
+							<div class="section_title"><h1>Cadets et Juniors</h1></div>
 							<div class="section_subtitle">Entraineurs : </div>
 						</div>
 						<div class="info_text">
