--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -233,11 +233,11 @@
   									</li>
   									<li class="d-flex flex-row align-items-start justify-content-start">
   										<div>Téléphone</div>
-  										<div>+36 345 7953 4994</div>
+  										<div>+33 9 60 41 82 89</div>
   									</li>
   									<li class="d-flex flex-row align-items-start justify-content-start">
   										<div>E-mail</div>
-  										<div>mail@gmail.com</div>
+  										<div>rugby_auray@yahoo.fr</div>
   									</li>
   								</ul>
   							</div>
