--- a/PARC/templates/jeunes.html
+++ b/PARC/templates/jeunes.html
@@ -33,11 +33,16 @@
 				<div class="col-lg-6 order-lg-2 order-1">
 					<div class="info_content">
 						<div class="section_title_container">
-							<div class="section_title"><h1>L'école de rugby'</h1></div>
-							<div class="section_subtitle">Entraineurs : </div>
+							<div class="section_title"><h1>L'école de rugby</h1></div>
+							<div class="section_subtitle">Responsable : Rémy </div>
 						</div>
 						<div class="info_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
+							<p>Label FFR</p>
+							<p>Centre de Formation</p>
+						  <p>165 licenciés (5 à 19 ans)</p>
+							<p>12 éducateurs délômés</p>
+							<p>Plus de 1500 heures en milieu scolaire</p>
+							</ul>
 						</div>
 
 					</div>
@@ -60,10 +65,10 @@
 					<div class="info_content">
 						<div class="section_title_container">
 							<div class="section_title"><h1>Cadets et Juniors</h1></div>
-							<div class="section_subtitle">Entraineurs : </div>
+							<div class="section_subtitle">Responsable : Matilin et Arnaud </div>
 						</div>
 						<div class="info_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
+							<p></p>
 						</div>
 
 					</div>
