--- a/PARC/templates/feminine.html
+++ b/PARC/templates/feminine.html
@@ -42,7 +42,7 @@
 							<div class="about_title">Rugby fémninin</div>
 							<div class="about_subtitle">dans le morbihan</div>
 							<div class="about_text">
-								<p>Les Breizh'Barians est une équipe de rugby Fénminine sénior (+18 ans) à 15 évoluant en fédéral 2.
+								<p>Les Breizh'Barians est une équipe de rugby Fénminine sénior (+18 ans) à 15 évoluant en fédérale 2.
 								Elles font partie d'un rassemblement regroupant 6 clubs : Le PARC, RCV (Vannes), ROL (Lorient), RLL (Lanester), RCPE (Elven), Grand Champions
 							  Les entrainements sont chaque jeudi  à Pluvigner à 20h</p>
 
@@ -134,7 +134,7 @@
 				<div class="col">
 					<div class="cta_content d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-start">
 						<div class="cta_text">Envie de faire partie <span>de l'équipe ?</span></div>
-						<div class="cta_button button ml-md-auto"><a href="#">Contactez nous</a></div>
+						<div class="cta_button button ml-md-auto"><a href="mailto:rugby_auray@yahoo.fr">Contactez nous</a></div>
 					</div>
 				</div>
 			</div>
