--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -695,7 +695,7 @@
 							<div class="player_name">Johann Kerrand </div>
 						</div>
 						<div class="player_text">
-							<p>Johann est néé à Vannes en 1990, après 10 à l'école de rugby de Grand-Champs il jouera 14 ans au RCV de l'école de rugby à la fédéral1/NationnalB.
+							<p>Johann est néé à Vannes en 1990, après 10 à l'école de rugby de Grand-Champs il jouera 14 ans au RCV de l'école de rugby à la fédérale 1/NationnalB.
 								Il a été sélectionné dans les équipes du morbihan, de bretagne à 15 et à 7. Il a également joué un match contre l'Irlande avec le Top 100 nationnal des moins de 17 ans.
 								</p>
 							<p>Johann est maintenant responsable E commerce et chargé de communication chez TID-Inox</p>
