--- a/PARC/templates/jeunes.html
+++ b/PARC/templates/jeunes.html
@@ -40,7 +40,7 @@
 							<p>Label FFR</p>
 							<p>Centre de Formation</p>
 						  <p>165 licenciés (5 à 19 ans)</p>
-							<p>12 éducateurs délômés</p>
+							<p>12 éducateurs diplômés</p>
 							<p>Plus de 1500 heures en milieu scolaire</p>
 							</ul>
 						</div>
@@ -188,7 +188,7 @@
 				<div class="col">
 					<div class="cta_content d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-start">
 						<div class="cta_text">Intéressé par les <span>équipes jeunes?</span></div>
-						<div class="cta_button button ml-md-auto"><a href="#">Contactez nous</a></div>
+						<div class="cta_button button ml-md-auto"><a href="mailto:rugby_auray@yahoo.fr">Contactez nous</a></div>
 					</div>
 				</div>
 			</div>
