--- a/PARC/templates/senior.html
+++ b/PARC/templates/senior.html
@@ -61,10 +61,10 @@
 								<div class="about_title">A, B et C</div>
 								<div class="about_subtitle">Le respect du jeu</div>
 								<div class="about_text">
-									<p>L'équipe A joue en fédérale 3 depuis XXXX. Elle évolue pour la saison 2019/2020 dans la poule numéro 8 avec les équipes du grand ouest comme la Baule, Plouzané, Tours ou encore Angers. Ces dernières années l'équipe A a réussi à se qualifier plusieurs fois
+									<p>L'équipe A joue en fédérale 3 (3 eme division nationnale amateur). Elle évolue pour la saison 2019/2020 dans la poule numéro 8 avec les équipes du grand ouest comme la Baule, Plouzané, Tours ou encore Angers. Ces dernières années l'équipe A a réussi à se qualifier plusieurs fois
 										pour les play off. L'équipe B joue en réserve de fédérale 3 (excellence B) et effectue tout les déplacement avec l'équipe A. Le PARC possède également une troisième équipe (C) qui évolue en 3/4eme division térritoriale
 										avec des déplacements principalement en bretagne.</p>
-									<p>Les trois équipes s'entrainent en commun le mardi et on un entrainements spécifique le vendredi. La A et la B s'entrainant à Auray et la C à Pluvigner. L'équipe sénior et constitué en tout d'environ 80 licencié et forme un groupe soudé.</p>
+									<p>Les trois équipes s'entrainent en commun le mardi et on un entrainements spécifique le vendredi. La A et la B s'entrainant à Auray et la C à Pluvigner. L'équipe sénior et constituée en tout d'environ 80 licenciés et forme un groupe soudé.</p>
 								</div>
 
 							</div>
@@ -207,7 +207,7 @@
 				<div class="col">
 					<div class="cta_content d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-start">
 						<div class="cta_text">Envie de faire partie <span>de l'équipe ?</span></div>
-						<div class="cta_button button ml-md-auto"><a href="#">Contactez nous</a></div>
+						<div class="cta_button button ml-md-auto"><a href="mailto:rugby_auray@yahoo.fr">Contactez nous</a></div>
 					</div>
 				</div>
 			</div>
