--- a/PARC/templates/sponsors.html
+++ b/PARC/templates/sponsors.html
@@ -84,8 +84,8 @@
 			<!-- Info Content -->
 			<div class="col-lg-6 order-lg-2 order-1">
 				<div class="info_image">
-					<a href="https://www.auray-voyages.com/">Auray Voyage</a>
-						<img src="{{ url_for('static', filename='images/AurayV.png')}}" style="display: block;" alt="">
+					<a href="https://www.auray-voyages.com/">
+						<img src="{{ url_for('static', filename='images/AurayV.png')}}" style="display: block;" alt=""></a>
 					</a>
 				</div>
 			</div>
@@ -197,7 +197,7 @@
 				<div class="col">
 					<div class="cta_content d-flex flex-md-row flex-column align-items-md-center align-items-start justify-content-start">
 						<div class="cta_text">Vous voulez devenir <span>Partenaire?</span></div>
-						<div class="cta_button button ml-md-auto"><a href="#">Contactez nous</a></div>
+						<div class="cta_button button ml-md-auto"><a href="mailto:rugby_auray@yahoo.fr">Contactez nous</a></div>
 					</div>
 				</div>
 			</div>
