--- a/PARC/templates/sponsors.html
+++ b/PARC/templates/sponsors.html
@@ -109,7 +109,7 @@
 		<!-- Info Content -->
 		<div class="col-lg-6 order-lg-2 order-1">
 			<div class="info_image">
-				<img src="{{ url_for('static', filename='images/sponsors/alredis.jpg')}}" style="display: block;" alt="">
+				<img src="{{ url_for('static', filename='images/alredis.jpg')}}" style="display: block;" alt="">
 			</div>
 		</div>
 
@@ -123,7 +123,7 @@
 	<div class="col-lg-6 order-lg-1 order-2">
 		<div class="info_image">
 			<a href="https://www.ouestboissons.fr/">
-				<img src="{{ url_for('static', filename='images/sponsors/ouestB.jpg')}}" style="display: block;" alt="">
+				<img src="{{ url_for('static', filename='images/ouestB.jpg')}}" style="display: block;" alt="">
 			</a>
 		</div>
 
@@ -132,7 +132,7 @@
 	<!-- Info Content -->
 	<div class="col-lg-6 order-lg-2 order-1">
 		<div class="info_image">
-			<img src="{{ url_for('static', filename='images/sponsors/superU.jpg')}}" style="display: block;" alt="">
+			<img src="{{ url_for('static', filename='images/superU.jpg')}}" style="display: block;" alt="">
 		</div>
 	</div>
 
@@ -146,7 +146,7 @@
 	<div class="col-lg-6 order-lg-1 order-2">
 		<div class="info_image">
 			<a href="http://www.fidouest.com/">
-			<img src="{{ url_for('static', filename='images/sponsors/fidouest.png')}}" style="display: block;" alt="">
+			<img src="{{ url_for('static', filename='images/fidouest.png')}}" style="display: block;" alt="">
 			</a>
 		</div>
 
@@ -155,7 +155,7 @@
 	<!-- Info Content -->
 	<div class="col-lg-6 order-lg-2 order-1">
 		<div class="info_image">
-			<img src="{{ url_for('static', filename='images/sponsors/veolia.jpg')}}" style="display: block;" alt="">
+			<img src="{{ url_for('static', filename='images/veolia.jpg')}}" style="display: block;" alt="">
 		</div>
 	</div>
 
@@ -168,7 +168,7 @@
 	<!-- Info Image -->
 	<div class="col-lg-6 order-lg-1 order-2">
 		<div class="info_image">
-			<img src="{{ url_for('static', filename='images/sponsors/axa.jpg')}}" style="display: block;" alt="">
+			<img src="{{ url_for('static', filename='images/axa.jpg')}}" style="display: block;" alt="">
 		</div>
 
 	</div>
@@ -177,7 +177,7 @@
 	<div class="col-lg-6 order-lg-2 order-1">
 		<div class="info_image">
 			<a href="https://www.sturno.com/">
-			<img src="{{ url_for('static', filename='images/sponsors/sturno.jpg')}}" style="display: block;" alt="">
+			<img src="{{ url_for('static', filename='images/sturno.jpg')}}" style="display: block;" alt="">
 			</a>
 		</div>
 	</div>
